fix bug 613184, imap threads wake up much more than needed, r=bienvenu